--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^2.2.3",
+    "html-react-parser": "^5.1.10",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
