--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,3 @@
 {
-  "extends": [
-    "airbnb",
-    "airbnb-typescript",
-    "airbnb/hooks",
-    "next/core-web-vitals",
-    "prettier"
-  ],
-  "parserOptions": {
-    "project": "./tsconfig.json"
-  }
+  "extends": ["next/core-web-vitals", "plugin:prettier/recommended"]
 }
